[project]
name = "steam-py"
version = "1.0.0"
description = "Steam API wrapper"
readme = "README.md"
authors = [
    { name = "Roman Chursanov", email = "roman@chrsnv.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
